--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="https://github.com/Chitransh02/chitransh_github/blob/main/Chitransh_Resume.pdf" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://raw.githubusercontent.com/Chitransh02/chitransh_github/main/Chitransh_Resume.pdf" download="Chitransh_Resume.pdf" title="Download CV" class="button button-primary">Download CV</a>
+
    		</div>   		
    	</div>
 
