--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/IPL DashBoard.png" alt="IPL DashB">
+	               	<img src="images/portfolio/IPL DashBoard.png" alt="IPL DashBoard">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
