--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="https://github.com/Chitransh02/My-Resume/blob/main/Chitransh%20Resume.pdf" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="Chitransh Resume.pdf" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
