--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
 
-   			<p class="lead">Feel free to connect with me on GitHub [Your GitHub Profile URL] to explore my data analysis projects and repositories. I welcome collaboration and feedback from fellow data enthusiasts.
+   			<p class="lead">Feel free to connect with me on social media to explore my data analysis projects and repositories. I welcome collaboration and feedback from fellow data enthusiasts.
 
 			   </p>
 
